Finalización de anexos

--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -6,6 +6,22 @@
 	note = {Online; Accedido el 20-Abr-2024}
 }
 
+@misc{ online:git,
+  	author = {Git},
+  	title = {\emph{Git}},
+  	year = {2024},
+  	howpublished = {\url{https://git-scm.com/}},
+  	note = {Online; Accedido el 20-Abr-2024},
+}
+
+@misc{ wiki:Kanban,
+	author = {Wikipedia},
+	title = {\emph{Kanban (desarrollo)}},
+	year = {2024},
+	howpublished = {\url{https://es.wikipedia.org/wiki/Kanban_(desarrollo)}},
+	note = {Online; Accedido el 20-Abr-2024}
+}
+
 @misc{ online:zube,
   	author = {Pivit Inc.},
   	title = {\emph{Zube}},
@@ -38,6 +54,30 @@
   	note = {Online; Accedido el 22-Abr-2024},
 }
 
+@misc{ wiki:miktex,
+	author = {Wikipedia},
+	title = {\emph{MiKTeX}},
+	year = {2024},
+	howpublished = {\url{https://es.wikipedia.org/wiki/MiKTeX}},
+	note = {Online; Accedido el 22-Abr-2024}
+}
+
+@misc{ wiki:ARIMA,
+	author = {Wikipedia},
+	title = {\emph{Modelo autorregresivo integrado de media móvil}},
+	year = {2024},
+	howpublished = {\url{https://es.wikipedia.org/wiki/Modelo_autorregresivo_integrado_de_media_m%C3%B3vil}},
+	note = {Online; Accedido el 10-Abr-2024}
+}
+
+@misc{ wiki:ORM,
+	author = {Wikipedia},
+	title = {\emph{Object–relational mapping}},
+	year = {2024},
+	howpublished = {\url{https://en.wikipedia.org/wiki/Object%E2%80%93relational_mapping}},
+	note = {Online; Accedido el 06-Jun-2024}
+}
+
 @misc{ online:licencia,
   	author = {Creatice commons},
   	title = {\emph{Licencia CC BY-NC-SA 4.0}},
@@ -55,6 +95,15 @@
     volume = {},
     doi = {10.1109/IEEESTD.1998.88286},
     author = {Institute of Electrical and Electronics Engineers}
+}
+
+@misc{ online:crue,
+  	author = {CRUE},
+  	title = {\emph{Directrices para la introducción de la Sostenibilidad
+en el Curriculum}},
+  	year = {2024},
+  	howpublished = {\url{https://www.crue.org/wp-content/uploads/2020/02/Directrices_Sosteniblidad_Crue2012.pdf}},
+  	note = {Online; Accedido el 06-Jun-2024},
 }
 
 @misc{ online:selenium,
