--- a/docs/latex/tex/1_Introduccion.tex
+++ b/docs/latex/tex/1_Introduccion.tex
@@ -103,6 +103,8 @@ Los materiales que se adjuntan con la memoria son:
 Además, los siguientes recursos están accesibles a través de internet:
 
 \begin{itemize}
+\item 
+  \textbf{Anexos}: \href{https://github.com/rmt0009alu/FAT/blob/main/docs/latex/anexos.pdf}{Consultar documentación técnica}.
 \item
   \textbf{Repositorio}: 
   Visitar \href{https://github.com/rmt0009alu/FAT}{FAT. GitHub}.
@@ -110,7 +112,7 @@ Además, los siguientes recursos están accesibles a través de internet:
   \textbf{Documentación del código}: 
   Visitar \href{https://fat.readthedocs.io/es/latest/intro.html#}{FAT. Read The Docs} 
 \item 
-  \textbf{Logs de calidad de código}: La calidad del código se ha medido de forma automatizada con \texttt{pylint} y \emph{GitHub actions}. Los informes generados muestran sólo los aspectos mejorables. Es decir, aquello que no está en los \emph{logs} es porque está con la calidad óptima. Descargar \hreaf{https://github.com/rmt0009alu/FAT/actions/runs/9451158145/artifacts/1586050874}{Último informe de \texttt{pylint}}.
+  \textbf{Logs de calidad de código}: La calidad del código se ha medido de forma automatizada con \texttt{pylint} y \emph{GitHub actions}. Los informes generados muestran sólo los aspectos mejorables. Es decir, aquello que no está en los \emph{logs} es porque está con la calidad óptima. Descargar \href{https://github.com/rmt0009alu/FAT/actions/runs/9451158145/artifacts/1586050874}{Último informe de \texttt{pylint}}.
 \item
   \textbf{Cobertura de código}: La cobertura de los tests se ha medido de forma automatizada con \texttt{coverage} y \emph{GitHub actions}. Es posible descargar un informe HTML en formato \emph{.zip}. Se descomprime en un directorio y se lanza desde \texttt{index.html}. Descargar \href{https://github.com/rmt0009alu/FAT/actions/runs/9451158144/artifacts/1586067173}{Último informe de \texttt{coverage}}.
 
