--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -2,9 +2,9 @@
 
 \section{Introducción}
 
-En un proyecto con un equipo completo de personas trabajando, podríamos definir la planificación de un proyecto software como una etapa que implica detallar los objetivos y el alcance del proyecto, identificar los requisitos y recursos necesarios, establecer un cronograma con hitos clave, asignar tareas a los miembros del equipo y prever los posibles riesgos. 
+En un proyecto con un equipo completo de personas trabajando, podríamos definir la planificación como una etapa que implica detallar los objetivos y el alcance, identificar los requisitos y recursos necesarios, establecer un cronograma con hitos clave, asignar tareas a los miembros del equipo y prever los posibles riesgos. 
 
-Dentro del contexto de este trabajo académico, se va a detallar en qué ha consistido la planificación temporal y se tratará de hacer un estudio de viabilidad realista.
+Dentro del contexto de un trabajo académico, en este anexo se va a detallar en qué ha consistido la planificación temporal y se tratará de hacer un estudio de viabilidad realista.
 
 
 \section{Planificación temporal}
@@ -16,12 +16,12 @@ En la memoria se ha indicado que se ha utilizado una metodología ágil de gesti
 \item  
 Desarrollo incremental a través de iteraciones llamadas \emph{sprints}.
 \item
-Utilización de repositorio \emph{Git} para solicitud de mejoras y para realizar un seguimiento de la evolución, con acceso para los tutores desde las fases iniciales. 
+Utilización de repositorio \emph{Git}\citep{online:git} para solicitud de mejoras y para realizar un seguimiento de la evolución, con acceso para los tutores desde las fases iniciales. 
 \item
 Control temporal a través de los \emph{sprints}, valorando al inicio de cada uno 
 cuál sería la duración adecuada basándonos en las tareas que se iban a realizar y el producto que se esperaba al final de esa iteración. 
 \item
-Seguimiento de tareas en un panel \emph{Kanban}.
+Seguimiento de tareas en un panel \emph{Kanban}\citep{wiki:Kanban}.
 \end{itemize}
 
 Además de los \emph{sprints} se diseñaron hitos relevantes denominados \emph{Milestones} en \emph{GitHub} que sirven como referencia de la producción realizada. 
@@ -224,7 +224,7 @@ A continuación se muestra un resumen de los \emph{sprints} que han tenido lugar
 		Mejorar el logging para lo que ocurra en esta nueva aplicación.
 		\end{itemize}
 	\item
-	Mejorar la lógica de acceso a las BDs. Aplicar MVC y evitar consultas directas de SQL en la medida de lo posible.
+	Mejorar la lógica de acceso a las BDs. Aplicar MVT y evitar consultas directas de SQL en la medida de lo posible.
 	\item 	
 	Ampliar los tests y mejorar la estructura de testing. 
   	\end{itemize}
@@ -409,7 +409,7 @@ La idea es mostrar al usuario un grafo creado con \emph{NetworkX}\citep{online:n
 	\begin{itemize}
 	\tightlist
 	\item 
-	Configurar \emph{MikTex}.
+	Configurar \emph{MikTex}\citep{wiki:miktex}.
 	\item
 	Descargar y preparar plantilla oficial de Trabajos de Fin de Grado. 
 	\item
@@ -496,7 +496,7 @@ La idea es mostrar al usuario un grafo creado con \emph{NetworkX}\citep{online:n
 \item
 \textbf{Contexto:} Ahora mismo se puede acceder a un apartado de \emph{forecasting} con redes LSTM pero no me convencen los resultados obtenidos, así que se dejará como una de las posibles mejoras del proyecto. Sin embargo, voy a añadir un apartado nuevo al \emph{Lab} sobre \emph{trading} algorítmico. 
 
-Además, tengo que terminar la documentación de ARIMA en la memoria y añadir la nueva documentación de \emph{trading} algorítmico. 
+Además, tengo que terminar la documentación de ARIMA\citep{wiki:ARIMA} en la memoria y añadir la nueva documentación de \emph{trading} algorítmico. 
 
 
 \item
