--- a/docs/latex/tex/C_Diseno.tex
+++ b/docs/latex/tex/C_Diseno.tex
@@ -63,7 +63,7 @@ El patrón MVT es una arquitectura de desarrollo web donde \emph{Model} maneja l
 
 \subsection{Patrón \emph{Repository}}
 
-\emph{Django} trabaja con el patrón \emph{Repository} de manera implícita a través de su sistema de modelos y el ORM (Object-Relational Mapping). Aunque no se implementa este patrón de manera estricta, su ORM y sus \emph{managers} proporcionan una funcionalidad muy similar.
+\emph{Django} trabaja con el patrón \emph{Repository} de manera implícita a través de su sistema de modelos y el ORM (Object-Relational Mapping)\citep{wiki:ORM}. Aunque no se implementa este patrón de manera estricta, su ORM y sus \emph{managers} proporcionan una funcionalidad muy similar.
 
 El patrón \emph{Repository} actúa como una capa intermedia entre la lógica de negocio y la capa de acceso a datos. Sus principales objetivos son:
 
