--- a/docs/latex/tex/F_ODS.tex
+++ b/docs/latex/tex/F_ODS.tex
@@ -2,7 +2,7 @@
 
 \section{Introducción}
 
-El presente Trabajo de Fin de Grado ha abarcado temas relacionados con \emph{Django}, finanzas, teoría moderna de porfolios o teoría de Harry M. Markowitz, Sharpe Ratio, \emph{machine learning} y ARIMA, entre otros. Durante la realización de este proyecto, se han adquirido y aplicado diversas competencias en sostenibilidad, según las directrices establecidas por la CRUE. En este anexo, se reflejarán las reflexiones personales sobre cómo los aspectos de sostenibilidad se han integrado y abordado a lo largo del trabajo.
+El presente Trabajo de Fin de Grado ha abarcado temas relacionados con \emph{Django}, finanzas, teoría moderna de porfolios o teoría de Harry M. Markowitz, Sharpe Ratio, \emph{machine learning} y ARIMA, entre otros. Durante la realización de este proyecto, se han adquirido y aplicado diversas competencias en sostenibilidad, según las directrices establecidas por la CRUE\citep{online:crue}. En este anexo, se reflejarán las reflexiones personales sobre cómo los aspectos de sostenibilidad se han integrado y abordado a lo largo del trabajo.
 
 \section{Competencias en sostenibilidad adquiridas}
 
