Añadir enlaces de vídeos a memoria

--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -926,12 +926,12 @@ journal = {Neural Comput.},
   pages = {42--56}
 }
 
-@article{paper:Empirical_Stock_India,
-  author = {Vijayalakshmi Ravi and P. A. Vijaya},
-  title = {An Empirical Study on Predicting Stock Prices in the Indian Stock Market Using Machine Learning Techniques},
-  journal = {Procedia Computer Science},
-  year = {2019},
-  pages = {1155--1160}
+@article{paper:fund_and_tech_analysis,
+  author = {Isaac Kofi Nti and Adebayo Felix Adekoya and Benjamin Asubam Weyori},
+  title = {A systematic review of fundamental and technical analysis of stock market predictions},
+  journal = {Springer},
+  year = {2020},
+  doi = {10.1007/s10462-019-09754-z},
 }
 
 @article{paper:Technical_Analysis_ML,
