--- a/docs/latex/tex/1_Introduccion.tex
+++ b/docs/latex/tex/1_Introduccion.tex
@@ -93,28 +93,26 @@ Los materiales que se adjuntan con la memoria son:
 
 \begin{itemize}
 \item
-	\textbf{Anexos}: 
-	\textbf{Herramienta web}:
-	Este proyecto está especialmente pensado para ser utilizado en un entorno local, pero se ha dispuesto una página web para que el usuario pueda hacer pruebas antes de instalarlo en su equipo. Visitar \href{http://takeiteasy.pythonanywhere.com/}{FAT: Financial Analysis Tool}.
+	\textbf{Anexos}: consultar \href{https://github.com/rmt0009alu/FAT/blob/main/docs/latex/anexos.pdf}{la documentación técnica}.
+\item
+	\textbf{Herramienta web}: este proyecto está especialmente pensado para ser utilizado en un entorno local, pero se ha dispuesto una página web para que el usuario pueda hacer pruebas antes de instalarlo en su equipo. Visitar \href{http://takeiteasy.pythonanywhere.com/}{FAT: Financial Analysis Tool}.
 \item	
-	\textbf{Vídeos de demostración}.
+	\textbf{Vídeo de presentación}: ver \href{https://universidaddeburgos-my.sharepoint.com/:v:/g/personal/rmt0009_alu_ubu_es/ESxs2XNp1v1PneyThIJRvqwBMulJvKeV0N6i_M6qe1m9Qw?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=seXrau}{presentación del TFG}.
+\item	
+	\textbf{Vídeo de demostración}: ver \href{https://universidaddeburgos-my.sharepoint.com/:v:/g/personal/rmt0009_alu_ubu_es/ERDnSesZvZdEgb9AV8b61YIBEUTlbkuAhP9xIqAlq5VtAg?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=kKGJyF}{demostración funcional}.
 \end{itemize}
 
 Además, los siguientes recursos están accesibles a través de internet:
 
 \begin{itemize}
+\item
+  \textbf{Repositorio}: visitar \href{https://github.com/rmt0009alu/FAT}{FAT. GitHub}.
+\item
+  \textbf{Documentación del código}: visitar \href{https://fat.readthedocs.io/es/latest/intro.html#}{FAT. Read The Docs} 
 \item 
-  \textbf{Anexos}: \href{https://github.com/rmt0009alu/FAT/blob/main/docs/latex/anexos.pdf}{Consultar documentación técnica}.
+  \textbf{Logs de calidad de código}: la calidad del código se ha medido de forma automatizada con \texttt{pylint} y \emph{GitHub actions}. Los informes generados muestran sólo los aspectos mejorables. Es decir, aquello que no está en los \emph{logs} es porque está con la calidad óptima. Descargar \href{https://github.com/rmt0009alu/FAT/actions/runs/9451158145/artifacts/1586050874}{informe de \texttt{pylint}}.
 \item
-  \textbf{Repositorio}: 
-  Visitar \href{https://github.com/rmt0009alu/FAT}{FAT. GitHub}.
-\item
-  \textbf{Documentación del código}: 
-  Visitar \href{https://fat.readthedocs.io/es/latest/intro.html#}{FAT. Read The Docs} 
-\item 
-  \textbf{Logs de calidad de código}: La calidad del código se ha medido de forma automatizada con \texttt{pylint} y \emph{GitHub actions}. Los informes generados muestran sólo los aspectos mejorables. Es decir, aquello que no está en los \emph{logs} es porque está con la calidad óptima. Descargar \href{https://github.com/rmt0009alu/FAT/actions/runs/9451158145/artifacts/1586050874}{Último informe de \texttt{pylint}}.
-\item
-  \textbf{Cobertura de código}: La cobertura de los tests se ha medido de forma automatizada con \texttt{coverage} y \emph{GitHub actions}. Es posible descargar un informe HTML en formato \emph{.zip}. Se descomprime en un directorio y se lanza desde \texttt{index.html}. Descargar \href{https://github.com/rmt0009alu/FAT/actions/runs/9451158144/artifacts/1586067173}{Último informe de \texttt{coverage}}.
+  \textbf{Cobertura de código}: La cobertura de los tests se ha medido de forma automatizada con \texttt{coverage} y \emph{GitHub actions}. Es posible descargar un informe HTML en formato \emph{.zip}. Se descomprime en un directorio y se lanza desde \texttt{index.html}. Descargar \href{https://github.com/rmt0009alu/FAT/actions/runs/9451158144/artifacts/1586067173}{informe de \texttt{coverage}}.
 
 \end{itemize}
 
