--- a/docs/latex/tex/6_Trabajos_relacionados.tex
+++ b/docs/latex/tex/6_Trabajos_relacionados.tex
@@ -9,7 +9,7 @@ Por otro lado, intentar predecir la evolución de los precios de valores cotizad
 \item \emph{Machine Learning for Asset Managers} \citep{paper:ML_Asset_Managers}
 \item \emph{Financial Time Series Forecasting with Deep Learning: A Systematic Literature Review: 2005-2019} \citep{paper:Deep_Learning_Review}. Aquí se pueden encontrar multitud de referencias a trabajos especializados en este campo. 
 \item \emph{Deep Learning for Finance: Deep Portfolios} \citep{paper:Deep_Portfolios}
-\item \emph{An Empirical Study on Predicting Stock Prices in the Indian Stock Market Using Machine Learning Techniques} \citep{paper:Empirical_Stock_India}
+\item \emph{A systematic review of fundamental and technical analysis of stock market predictions} \citep{paper:fund_and_tech_analysis}
 \item \emph{Technical Analysis and Machine Learning: A Systematic Review} \citep{paper:Technical_Analysis_ML}
 \end{itemize}
 
