Corrección de enlaces en memoria

--- a/docs/latex/tex/1_Introduccion.tex
+++ b/docs/latex/tex/1_Introduccion.tex
@@ -108,11 +108,11 @@ Además, los siguientes recursos están accesibles a través de internet:
 \item
   \textbf{Repositorio}: visitar \href{https://github.com/rmt0009alu/FAT}{FAT. GitHub}.
 \item
-  \textbf{Documentación del código}: visitar \href{https://fat.readthedocs.io/es/latest/intro.html#}{FAT. Read The Docs} 
+  \textbf{Documentación del código}: visitar \href{https://fat.readthedocs.io/es/latest/intro.html#}{FAT. Read The Docs}. 
 \item 
-  \textbf{Logs de calidad de código}: la calidad del código se ha medido de forma automatizada con \texttt{pylint} y \emph{GitHub actions}. Los informes generados muestran sólo los aspectos mejorables. Es decir, aquello que no está en los \emph{logs} es porque está con la calidad óptima. Descargar \href{https://github.com/rmt0009alu/FAT/actions/runs/9451158145/artifacts/1586050874}{informe de \texttt{pylint}}.
+  \textbf{Logs de calidad de código}: la calidad del código se ha medido de forma automatizada con \texttt{pylint} y \emph{GitHub actions}. Los informes generados muestran sólo los aspectos mejorables. Es decir, aquello que no está en los \emph{logs} es porque está con la calidad óptima. Descargar \href{https://github.com/rmt0009alu/FAT/blob/main/informes\%20GitHub\%20actions/logs_de_pylint.zip}{informe de \texttt{pylint}}.
 \item
-  \textbf{Cobertura de código}: La cobertura de los tests se ha medido de forma automatizada con \texttt{coverage} y \emph{GitHub actions}. Es posible descargar un informe HTML en formato \emph{.zip}. Se descomprime en un directorio y se lanza desde \texttt{index.html}. Descargar \href{https://github.com/rmt0009alu/FAT/actions/runs/9451158144/artifacts/1586067173}{informe de \texttt{coverage}}.
+  \textbf{Cobertura de código}: La cobertura de los tests se ha medido de forma automatizada con \texttt{coverage} y \emph{GitHub actions}. Es posible descargar un informe HTML en formato \emph{.zip}. Se descomprime en un directorio y se lanza desde \texttt{index.html}. Descargar \href{https://github.com/rmt0009alu/FAT/blob/main/informes\%20GitHub\%20actions/informe_de_coverage.zip}{informe de \texttt{coverage}}.
 
 \end{itemize}
 
